Adding submissionType, Delete Reports  on admin side & some colour related changes.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,8 @@ JWT_SECRET=your_jwt_secret ## Your jwt secret key (any random letters + numbers)
 EMAIL_SERVICE=smtp.gmail.com
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-specific-password #Open your account ~> Manage account ~> Enable 2FA ~> Search "App password" ~> Create 12 digit app password for this application
+
+#Cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
